* 1.9.0
	* New features:
* 1.8.0
	* New features:
		- Support SSDB style keys command through redis-cli(2014-12-08)
		- Replication supports AUTH(2014-12-01)
		- Sync qset operations(2014-11-05)
		- Add dbsize command(2014-11-02)
		- Include sync clients' stats in info(2014-11-02)
		- Refactor codes, separate into: libutil, libnet, libssdb(2014-11-02)
	* Bug fixes:
		- Fix bug when process dump and sync140 command with redis-cli(2015-01-27)
* 1.7.0.1
	* New features:
		- Sync qset operations(2014-11-05)
		- *incr commands return error if value cannot be converted to integer(2014-10-24)
		- Include replication/sync stats in info(2014-10-23)
		- Add set_key_range, get_key_range(for KV) command(2014-10-22)
		- Add qset/lset command(sync won't work), rewrite Response(2014-10-19)
* 1.7.0.0
	* New features:
		- export(ssdb-cli) command supports -i(interactive) option(2014-10-16)
		- ssdb-cli performance improved(2014-10-11)
		- Add export, import commands in ssdb-cli(2014-10-11)
		- Add qtrim_front, qtrim_back commands(2014-10-11)
		- ssdb-dump support auth(2014-10-10)
		- Add max_open_files config, default is 100(2014-10-08)
		- Add auth command(2014-09-20)
		- Enable qpop multi elements at a time(2014-09-16)
	* Incompatible changes:
		- Rewrite hexmem, this affects log messages(2014-10-10)
* 1.6.8.8
	* New features:
		- Add hrlist, zrlist, qrlist commands(2014-07-27)
		- Add string/bit operations: getbit, setbit, bitcount, strlen, substr(getrange)(2014-06-07)
		- Put multi_*get commands to execute in worker thread(2014-06-17)
	* Incompatible changes:
		- Delete expireation info when deleting key(2014-06-28)
		- Inlucde links, total_calls in info cmd's reply(2014-06-17)
		- Rename redis_getrange command to getrange(2014-07-27)
	* Bug fixes:
		- Fix ssdb-bench bug on del bench(2014-08-21)
		- Return entrire string when substr's params are ommitted(2014-07-27)
		- Fix key expiration/ttl bug(2014-07-02)
		- Fix zRangeByScore(redis) bug(2014-06-28)

* 1.6.8.7