@@ -1,6 +1,6 @@
 # encoding=utf-8
 # Generated by cpy
-# 2014-11-02 15:47:50.149502
+# 2015-02-15 16:53:50.700418
 import os, sys
 from sys import stdin, stdout
 
@@ -176,7 +176,7 @@ class SSDB(object):
 					pass
 					return SSDB_Response(resp[0], resp[1 : ])
 				break
-			if False or ((cmd) == 'keys') or ((cmd) == 'zkeys') or ((cmd) == 'hkeys') or ((cmd) == 'list') or ((cmd) == 'hlist') or ((cmd) == 'zlist'):
+			if False or ((cmd) == 'keys') or ((cmd) == 'rkeys') or ((cmd) == 'zkeys') or ((cmd) == 'zrkeys') or ((cmd) == 'hkeys') or ((cmd) == 'hrkeys') or ((cmd) == 'list') or ((cmd) == 'hlist') or ((cmd) == 'hrlist') or ((cmd) == 'zlist') or ((cmd) == 'zrlist'):
 				pass
 				return SSDB_Response(resp[0], resp[1 : ])
 				break
